--- a/index.html
+++ b/index.html
@@ -8,88 +8,36 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 </head>
 <body background="img/background.png">
     <p class="header">Apple TV VS Roku - Which is right for you?</p>
-    <p class="explanation">Here's the lowdown: You can get all content on an Apple TV through Airplay (casting), including Amazon content. However, you can't get iTunes content on Roku. (Easily, anyway. It requires a bit of tech expertise.) Here's 10 differences between the two. Choose which feature you find important, and it will show you which has the most of those features. We've even got a tie-breaker it comes out 50/50.</p>
+    <p class="explanation"></p>
       <div class="columns">
           <div class="col1">
-            <p class="imp-header1">Important?</p>
-            
-            <div class="col1a">
-                <ul>
-                    <li><p class="headingtext">Features:</p></li>
-                    <li>Lowest Cost</li>
-                    <li>Control TV with Remote</li>
-                    <li>Headphone Jack on Remote</li>
-                    <li>Angry Birds & Other Motion Games</li>
-                    <li>Follow Movies for Price Drops</li> 
-                    <li>Voice Search in Apps/Channels</li> 
-                    <li>Dedicated buttons on Remote</li>
-                    <li>Rechargeable Remote</li>
-                    <li>Remote Finder</li>
-                    <li>Stream Ultra HD 4k content</li>                
-                </ul>
-            </div>
             <div class="col1b">
-                <form action="" id="featureform">
-                <ul class="importance">
-                    <li>Yes</li>
-                    <li>No</li>   
+            <p class="headingtext">Features:</p>
+                <ul class="feature">
+                    <li img src="img/Roku.jpg">Lowest Cost<span>test</span></li>
+                    <li img src="img/AppleTV.jpg">Control TV with Remote</li>
+                    <li img src="img/Roku.jpg">Headphone Jack on Remote</li>
+                    <li img src="img/AppleTV.jpg">Angry Birds & Other Motion Games</li>
+                    <li img src="img/Roku.jpg">Follow Movies for Price Drops</li> 
+                    <li img src="img/AppleTV.jpg">Voice Search in Apps/Channels</li> 
+                    <li img src="img/Roku.jpg">Dedicated buttons on Remote</li>
+                    <li img src="img/AppleTV.jpg">Rechargeable Remote</li>
+                    <li img src="img/Roku.jpg">Remote Finder</li>
+                    <li img src="img/Roku.jpg">Stream Ultra HD 4k content</li>              
                 </ul>
-                <div class="feature">
-                    <input name="cost" type="radio">
-                    <input name="cost" type="radio">    
-                <p></p>
-                    <input name="control" type="radio" value="0">  
-                    <input name="control" type="radio" value="10">     
-                <p></p>
-                    <input name="headphone" type="radio" value="10"> 
-                    <input name="headphone" type="radio" value="0">     
-                <p></p>
-                    <input name="games" type="radio" value="0">
-                    <input name="games" type="radio" value="10">     
-                <p></p>
-                    <input name="follow" type="radio" value="10"> 
-                    <input name="follow" type="radio" value="0">     
-                <p></p>
-                    <input name="voice" type="radio" value="0"> 
-                    <input name="voice" type="radio" value="10">     
-                <p></p>
-                    <input name="buttons" type="radio" value="10"> 
-                    <input name="buttons" type="radio" value="0">     
-                <p></p>
-                    <input name="recharge" type="radio" value="0"> 
-                    <input name="recharge" type="radio" value="10">     
-                <p></p>
-                    <input name="finder" type="radio" value="0"> 
-                    <input name="finder" type="radio" value="10">     
-                <p></p>
-                    <input name="HD4k" type="radio" value="10"> 
-                    <input name="HD4k" type="radio" value="0">     
-                </div>
-            </form>
             </div>
     </div>
     <div class="col2">
-        <div class="box"> 
-            <div class="photo">
-                <img src="img/Roku.jpg">
-            </div>
-            <div id="roku-percent">
-                
-            </div>
-            </div>
-            <input type="text" name="sum" />
-        <div class="box"> 
-            <div class="photo">
-                <img src="img/AppleTV.jpg">
-            </div>
-            </div>
-            <input type="text" id="answer" size="20">
+        <div class="lightbox">
+            <img src="img/atv-roku.jpg"/>
         </div>
-  </div>
+        <div class="detailsbox">
+        </div>
   </div>
   
 </div>
