update back to addition

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="col1b">
             <p class="headingtext">Features:</p>
                 <ul class="feature">
-                    <li img src="img/Roku.jpg">Lowest Cost<span>test</span></li>
+                    <li img src="img/Roku.jpg">Lowest Cost</li>
                     <li img src="img/AppleTV.jpg">Control TV with Remote</li>
                     <li img src="img/Roku.jpg">Headphone Jack on Remote</li>
                     <li img src="img/AppleTV.jpg">Angry Birds & Other Motion Games</li>
@@ -31,12 +31,41 @@
                     <li img src="img/Roku.jpg">Stream Ultra HD 4k content</li>              
                 </ul>
             </div>
+            <div class="col1a">
+                <ul class="importance">
+                    <li>Yes</li>
+                    <li>No</li>   
+                </ul>
+                <div class="radio" alt="cost">
+                    <input name="cost" type="radio" class="Roku">
+                    <input name="cost" type="radio" class="Apple"> 
+                    <input name="control" type="radio" class="Roku">
+                    <input name="control" type="radio" class="Apple">
+                    <input name="headphone" type="radio" class="Roku">
+                    <input name="headphone" type="radio" class="Apple">
+                    <input name="games" type="radio" class="Roku">
+                    <input name="games" type="radio" class="Apple">
+                    <input name="follow" type="radio" class="Roku">
+                    <input name="follow" type="radio" class="Apple"> 
+                    <input name="voice" type="radio" class="Roku">
+                    <input name="voice" type="radio" class="Apple"> 
+                    <input name="buttons" type="radio" class="Roku">
+                    <input name="buttons" type="radio" class="Apple">
+                    <input name="recharge" type="radio" class="Roku">
+                    <input name="recharge" type="radio" class="Apple">
+                    <input name="finder" type="radio" class="Roku">
+                    <input name="finder" type="radio" class="Apple">
+                    <input name="ultraHD" type="radio" class="Roku">
+                    <input name="ultraHD" type="radio" class="Apple">    
+                </div>
+            </div>
     </div>
     <div class="col2">
         <div class="lightbox">
             <img src="img/atv-roku.jpg"/>
         </div>
         <div class="detailsbox">
+            <p><span class="Roku_results">0</span> % Roku &ndash; <span class="Apple_results">0</span>% Apple TV</p>
         </div>
   </div>
   
